--- a/index.html
+++ b/index.html
@@ -36,4 +36,7 @@ BAG stands for integrity
   left: 50%;
   top: 50%;
   transform: translate (-50%, -50%);
+  font-style: sans-serif;
+  background-color: beige;
+  color: white;
 </html>
