--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 </head>
 <body>
 <div id="manifesto">
-The BAG Manifesto
-
-BAG is community
-BAG is craft
-BAG is care
-BAG is sharing
-BAG is listening
-
-BAG creates awareness
-BAG creates collectiveness
-BAG creates inclusion
-BAG creates a platform for discussion
-
-BAG celebrates (re)discovering simple principles
-BAG celebrates exploring cultural memory
-BAG celebrates connecting and reconnecting
-BAG celebrates change and ephemerality
-BAG celebrates dissensus as well as consensus
-
-BAG stands for withholding uncertainty
-BAG stands for empowerment
-BAG stands for integrity
+  <b>The BAG Manifesto</b>
+<br><br>
+BAG is community<br>
+BAG is craft<br>
+BAG is care<br>
+BAG is sharing<br>
+BAG is listening<br>
+<br>
+BAG creates awareness<br>
+BAG creates collectiveness<br>
+BAG creates inclusion<br>
+BAG creates a platform for discussion<br>
+<br>
+BAG celebrates (re)discovering simple principles<br>
+BAG celebrates exploring cultural memory<br>
+BAG celebrates connecting and reconnecting<br>
+BAG celebrates change and ephemerality<br>
+BAG celebrates dissensus as well as consensus<br>
+<br>
+BAG stands for withholding uncertainty<br>
+BAG stands for empowerment<br>
+BAG stands for integrity<br>
 </div>
 </body>
 <style>
@@ -35,8 +35,9 @@ BAG stands for integrity
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate (-50%, -50%);
+  transform: translate(-50%, -50%);
   font-style: sans-serif;
-  background-color: beige;
+  background-color: brown;
   color: white;
+  padding: 10px;
 </html>
