--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div id="manifesto">
-  <b>The BAG Manifesto</b>
+  <b>The BAG Manifesto:</b>
 <br><br>
 BAG is community<br>
 BAG is craft<br>
@@ -30,14 +30,33 @@ BAG stands for integrity<br>
 </body>
 <style>
 #manifesto {
-  width: 300px;
-  height: 700px;
+  width: 700px;
+  height: 900px;
   position: absolute;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 50px;
+  transform: translate(-50%, 0);
   font-style: sans-serif;
-  background-color: brown;
-  color: white;
+ 
   padding: 10px;
+  }
+h1 {
+  font-family: sans-serif, arial;
+  font-size: 30px;
+  color: brown;
+  }
+  
+a {
+  font-family: sans-serif, arial;
+  font-size: 30px;
+  color: brown;
+  text-decoration: none;
+  }
+  
+a:hover {
+  font-family: sans-serif, arial;
+  font-size: 30px;
+  color: white;
+  background-color:brown;
+  }
 </html>
