--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 </head>
 <body>
 <div id="manifesto">
-  <b>The BAG Manifesto:</b>
+ <h1> <b>The BAG Manifesto:</b>
 <br><br>
-BAG is community<br>
-BAG is craft<br>
-BAG is care<br>
-BAG is sharing<br>
-BAG is listening<br>
+   BAG is <a href="">community</a><br>
+BAG is <a href="">craft</a><br>
+BAG is <a href="">care</a><br>
+BAG is <a href="">sharing</a><br>
+BAG is <a href="">listening</a><br>
 <br>
-BAG creates awareness<br>
-BAG creates collectiveness<br>
-BAG creates inclusion<br>
-BAG creates a platform for discussion<br>
+BAG creates <a href="">awareness</a><br>
+BAG creates <a href="">collectiveness</a><br>
+BAG creates <a href="">inclusion</a><br>
+BAG creates a platform for <a href="">discussion</a><br>
 <br>
-BAG celebrates (re)discovering simple principles<br>
-BAG celebrates exploring cultural memory<br>
-BAG celebrates connecting and reconnecting<br>
-BAG celebrates change and ephemerality<br>
-BAG celebrates dissensus as well as consensus<br>
+BAG celebrates <a href="">(re)discovering simple principles</a><br>
+BAG celebrates <a href="">exploring cultural memory</a><br>
+BAG celebrates <a href="">connecting and reconnecting</a><br>
+BAG celebrates <a href="">change and ephemerality</a><br>
+BAG celebrates <a href="">dissensus as well as consensus</a><br>
 <br>
-BAG stands for withholding uncertainty<br>
-BAG stands for empowerment<br>
-BAG stands for integrity<br>
+BAG stands for <a href="">withholding uncertainty</a><br>
+BAG stands for <a href="">empowerment</a><br>
+   BAG stands for integrity<br></h1>
 </div>
 </body>
 <style>
