--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ BAG celebrates <a href="">dissensus as well as consensus</a><br>
 <br>
 BAG stands for <a href="">withholding uncertainty</a><br>
 BAG stands for <a href="">empowerment</a><br>
-   BAG stands for integrity<br></h1>
+  BAG stands for <a href="">integrity</a><br></h1>
 </div>
 </body>
 <style>
@@ -59,4 +59,7 @@ a:hover {
   color: white;
   background-color:brown;
   }
+ body{
+  background-color: beige;
+ }
 </html>
