--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@ h1 {
 a {
   font-family: sans-serif, arial;
   font-size: 30px;
-  color: brown;
+  color: #c4911e;
   text-decoration: none;
   }
   
 a:hover {
   font-family: sans-serif, arial;
   font-size: 30px;
-  color: white;
-  background-color:brown;
+  color: #493632;
+  background-color: #c4911e;
   }
  body{
-  background-color: beige;
+  background-color: #493632;
  }
 </html>
