--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
  <h1> <b>The BAG Manifesto:</b>
 <br><br>
 <div class="scrollerer">  <div class="scrolling">
-          <h4> BAG is <a href="">community</a> </h4>  </div><div class="scrolling" aria-hidden="true">
-          <h4> BAG is <a href="">community</a></h4>  </div><div class="scrolling" aria-hidden="true">
-          <h4> BAG is <a href="">community</a> </h4>  </div><div class="scrolling" aria-hidden="true">
-          <h4> BAG is <a href="">community</a></h4>  </div> </div>
+          <h1> BAG is <a href="">community</a> </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a> </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1>  </div> </div>
 <br>
 BAG is <a href="">craft</a><br>
 BAG is <a href="">care</a><br>
@@ -47,7 +47,7 @@ BAG stands for <a href="">empowerment</a><br>
   }
 h1 {
   font-family: sans-serif, arial;
-  font-size: 30px;
+  font-size: 90px;
   color: brown;
   }
  
@@ -55,15 +55,14 @@ h1 {
   overflow: hidden;
   white-space: nowrap;
     padding: 3px;
-    border-radius:28px;
+    border: none;
     margin: 0px;
-   -moz-box-shadow:    inset 0 0 5px #000000;
-   -webkit-box-shadow: inset 0 0 5px #000000;
-   box-shadow:         inset 0 0 5px #000000;
+  width: 100vw;
+   
 }
 
 .scrolling {
-  animation: marquee 4s linear infinite;
+  animation: marquee 6s linear infinite;
   display: inline-block;
   padding-right: 10px;
 }
