--- a/index.html
+++ b/index.html
@@ -34,21 +34,11 @@ BAG stands for <a href="">empowerment</a><br>
 </div>
 </body>
 <style>
-#manifesto {
-  width: 800px;
-  height: 900px;
-  position: absolute;
-  left: 50%;
-  top: 50px;
-  transform: translate(-50%, 0);
-  font-style: sans-serif;
- 
-  padding: 10px;
-  }
+
 h1 {
   font-family: sans-serif, arial;
   font-size: 90px;
-  color: brown;
+  color: #c4911e;
   }
  
  .scrollerer {
@@ -77,7 +67,7 @@ h1 {
 }
 a {
   font-family: sans-serif, arial;
-  font-size: 30px;
+  font-size: 90px;
   color: #c4911e;
   text-decoration: none;
   }
@@ -88,7 +78,7 @@ a:hover {
   color: #493632;
   background-color: #c4911e;
   }
- body{
+ body {
   background-color: #493632;
  }
 </html>
