--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@ BAG stands for <a href="">empowerment</a><br>
 h1 {
   font-family: sans-serif, arial;
   font-size: 90px;
-  color: #c4911e;
+ -webkit-text-stroke: 2px #c4911e;
+	color: transparent;
+  
   }
  
  .scrollerer {
@@ -68,15 +70,17 @@ h1 {
 a {
   font-family: sans-serif, arial;
   font-size: 90px;
-  color: #c4911e;
+ -webkit-text-stroke: 2px #c4911e;
+	color: transparent;
   text-decoration: none;
   }
   
 a:hover {
   font-family: sans-serif, arial;
-  font-size: 30px;
+  font-size: 90px;
   color: #493632;
-  background-color: #c4911e;
+  -webkit-text-stroke: 2px #c4911e;
+	
   }
  body {
   background-color: #493632;
