--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
  <h1> <b>The BAG Manifesto:</b>
 <br><br>
 <div class="scrollerer">  <div class="scrolling">
-          <h1> BAG is <a href="">community</a> </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a> </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1>  </div> </div>
+          <h1> BAG is <a href="">community</a>   </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>  </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>   </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>  </h1>  </div> </div>
 <br>
-BAG is <a href="">craft</a><br>
+	 <div class="scrollererA">  <div class="scrollingA">
+          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a> </h1>  </div> </div><br>
 BAG is <a href="">care</a><br>
 BAG is <a href="">sharing</a><br>
 BAG is <a href="">listening</a><br>
@@ -58,6 +62,23 @@ h1 {
   display: inline-block;
   padding-right: 10px;
 }
+	
+	.scrollererA {
+  overflow: hidden;
+  white-space: nowrap;
+    padding: 3px;
+    border: none;
+    margin: 0px;
+  width: 100vw;
+   
+}
+
+.scrollingB {
+  animation: marquee 6s linear infinite;
+	animation-direction: reverse;
+  display: inline-block;
+  padding-right: 10px;
+}
 
 @keyframes marquee {
   from {
@@ -78,7 +99,7 @@ a {
 a:hover {
   font-family: sans-serif, arial;
   font-size: 90px;
-  color: #493632;
+  color: #c4911e;
   -webkit-text-stroke: 2px #c4911e;
 	
   }
