--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
           <h1> BAG is <a href="">community</a>  </h1>  </div> </div>
 <br>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a> </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a> </h1>  </div> </div><br>
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div> </div><br>
 BAG is <a href="">care</a><br>
 BAG is <a href="">sharing</a><br>
 BAG is <a href="">listening</a><br>
@@ -74,8 +74,7 @@ h1 {
 }
 
 .scrollingB {
-  animation: marquee 6s linear infinite;
-	animation-direction: reverse;
+  animation: marquee 6s linear reverse infinite;
   display: inline-block;
   padding-right: 10px;
 }
