--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <h1> BAG is <a href="">community</a>  </h1>  </div> </div>
 <br>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div><div class="scrollingA" aria-hidden="true">
           <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div> </div><br>
 BAG is <a href="">care</a><br>
 BAG is <a href="">sharing</a><br>
@@ -73,7 +73,7 @@ h1 {
    
 }
 
-.scrollingB {
+.scrollingA {
   animation: marquee 6s linear reverse infinite;
   display: inline-block;
   padding-right: 10px;
