--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
  <h1> <b>The BAG Manifesto:</b>
 <br><br>
 <div class="scrollerer">  <div class="scrolling">
-          <h1> BAG is <a href="">community</a>   </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a>  </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a>   </h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a>  </h1>  </div> </div>
+          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div> </div>
 <br>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a></h1>  </div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>    BAG is <a href="">craft</a> </div> </div><br>
+          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a></h1>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a></h1>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a>&nsbp;&nsbp;</div> </div><br>
 BAG is <a href="">care</a><br>
 BAG is <a href="">sharing</a><br>
 BAG is <a href="">listening</a><br>
@@ -44,6 +44,7 @@ h1 {
   font-size: 90px;
  -webkit-text-stroke: 2px #c4911e;
 	color: transparent;
+	margin: 0;
   
   }
  
