--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
  <h1> <b>The BAG Manifesto:</b>
 <br><br>
 <div class="scrollerer">  <div class="scrolling">
-          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1>&nsbp;&nsbp;  </div> </div>
+          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div> </div>
 <br>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a></h1>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a></h1>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a>&nsbp;&nsbp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nsbp;&nsbp;BAG is <a href="">craft</a>&nsbp;&nsbp;</div> </div><br>
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</div> </div><br>
 BAG is <a href="">care</a><br>
 BAG is <a href="">sharing</a><br>
 BAG is <a href="">listening</a><br>
