--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
           <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
           <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
           <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div> </div>
-<br>
 	 <div class="scrollererA">  <div class="scrollingA">
           <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
           <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</div> </div><br>
-BAG is <a href="">care</a><br>
-BAG is <a href="">sharing</a><br>
-BAG is <a href="">listening</a><br>
+		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div> </div>
+	 <div class="scrollerer">  <div class="scrolling">
+	 <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1> </div> </div>
+	 <div class="scrollererA">  <div class="scrollingA">
+          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div> </div><br>
+<div class="scrollerer">  <div class="scrolling">
+	<h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div> </div>
 <br>
 BAG creates <a href="">awareness</a><br>
 BAG creates <a href="">collectiveness</a><br>
