--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
 		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div> </div>
 	 <div class="scrollerer">  <div class="scrolling">
-	 <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;</h1> </div> </div>
+	 <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp; </div> </div>
 	 <div class="scrollererA">  <div class="scrollingA">
           <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
           <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
