--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
           <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
           <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div> </div>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a></h1>&nbsp;&nbsp;</div> </div>
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div> </div>
 	 <div class="scrollerer">  <div class="scrolling">
-	 <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a></h1>&nbsp;&nbsp; </div> </div>
+	 <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a>&nbsp;&nbsp;</h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">care</a>&nbsp;&nbsp;BAG is <a href="">care</a>&nbsp;&nbsp;</h1> </div> </div>
 	 <div class="scrollererA">  <div class="scrollingA">
-          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div><div class="scrollingA" aria-hidden="true">
-		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a></h1>&nbsp;&nbsp;</div> </div><br>
+          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+          <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
+		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div> </div><br>
 <div class="scrollerer">  <div class="scrolling">
-	<h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">listening</a></h1> &nbsp; &nbsp;  </div> </div>
+	  <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1> </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1> </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1></div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1></div> </div>
 <br>
 BAG creates <a href="">awareness</a><br>
 BAG creates <a href="">collectiveness</a><br>
@@ -70,9 +70,8 @@ h1 {
 }
 
 .scrolling {
-  animation: marquee 6s linear infinite;
+  animation: marquee 12s linear infinite;
   display: inline-block;
-  padding-right: 10px;
 }
 	
 	.scrollererA {
@@ -86,9 +85,8 @@ h1 {
 }
 
 .scrollingA {
-  animation: marquee 6s linear reverse infinite;
+  animation: marquee 12s linear reverse infinite;
   display: inline-block;
-  padding-right: 10px;
 }
 
 @keyframes marquee {
