--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
  <h1> <b>The BAG Manifesto:</b>
 <br><br>
 <div class="scrollerer">  <div class="scrolling">
-          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div><div class="scrolling" aria-hidden="true">
-          <h1> BAG is <a href="">community</a></h1> &nbsp; &nbsp;  </div> </div>
+          <h1> BAG is <a href="">community</a>&nbsp; &nbsp;</h1>   </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>&nbsp; &nbsp; </h1>  </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>&nbsp; &nbsp;</h1>   </div><div class="scrolling" aria-hidden="true">
+          <h1> BAG is <a href="">community</a>&nbsp; &nbsp;</h1>   </div> </div>
 	 <div class="scrollererA">  <div class="scrollingA">
           <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
           <h1> BAG is <a href="">craft</a>&nbsp;&nbsp;BAG is <a href="">craft</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
