--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
           <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
 		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div><div class="scrollingA" aria-hidden="true">
-		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div> </div><br>
+		 <h1> BAG is <a href="">sharing</a>&nbsp;&nbsp;BAG is <a href="">sharing</a>&nbsp;&nbsp;</h1></div> </div>
 <div class="scrollerer">  <div class="scrolling">
 	  <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1> </div><div class="scrolling" aria-hidden="true">
           <h1> BAG is <a href="">listening</a>&nbsp;&nbsp;</h1> </div><div class="scrolling" aria-hidden="true">
