--- a/hover.html
+++ b/hover.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>test test</title>
+    <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
   </head>
   
   <style>   
