--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@ h1 {
 
 .scrolling {
   animation: marquee 12s linear infinite;
+	transition-delay: 10s;
+	transition-timing-function: ease-out;
+	
   display: inline-block;
 }
 	
@@ -86,6 +89,9 @@ h1 {
 
 .scrollingA {
   animation: marquee 12s linear reverse infinite;
+	transition-delay: 10s;
+	transition-timing-function: ease-out;
+	
   display: inline-block;
 }
 
