--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ h1 {
 }
 
 .scrolling {
-  animation: marquee 12s linear infinite;
+  animation: marquee 12s linear;
 	transition-delay: 10s;
 	transition-timing-function: ease-out;
 	
@@ -88,7 +88,7 @@ h1 {
 }
 
 .scrollingA {
-  animation: marquee 12s linear reverse infinite;
+  animation: marquee 12s linear reverse;
 	transition-delay: 10s;
 	transition-timing-function: ease-out;
 	
