--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ h1 {
 }
 
 .scrolling {
-  animation: marquee 12s linear;
+  animation: marquee 8s linear;
 	transition-delay: 10s;
-	transition-timing-function: ease-out;
+	transition-timing-function: ease-out 20s;
 	
   display: inline-block;
 }
@@ -88,9 +88,9 @@ h1 {
 }
 
 .scrollingA {
-  animation: marquee 12s linear reverse;
+  animation: marquee 8s linear reverse;
 	transition-delay: 10s;
-	transition-timing-function: ease-out;
+	transition-timing-function: ease-out 20s;
 	
   display: inline-block;
 }
