--- a/hover.html
+++ b/hover.html
@@ -12,11 +12,11 @@
   transform-origin: left top;
   transition: transform 3s;
   width: 100px;
-
-  &:hover {
+    }
+    
+ .test.hover {
     transform: rotate(500deg);
   }
-}
     
     .h1 {
       font-size: 40px;
