--- a/hover.html
+++ b/hover.html
@@ -7,11 +7,11 @@
   <style>   
     
 .test {
-
   margin: 150px auto;
   transform-origin: left top;
   transition: transform 3s;
   width: 100px;
+  background:orange;
     }
     
  .test.hover {
