--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ h1 {
 .scrolling {
   animation: marquee 8s linear;
 	transition-delay: 10s;
-	transition-timing-function: ease-out 20s;
+	transition-timing-function: ease-out;
+	transition-duration: 5s;
 	
   display: inline-block;
 }
@@ -90,7 +91,8 @@ h1 {
 .scrollingA {
   animation: marquee 8s linear reverse;
 	transition-delay: 10s;
-	transition-timing-function: ease-out 20s;
+	transition-timing-function: ease-out;
+	transition-duration: 5s;
 	
   display: inline-block;
 }
